--- a/style.css
+++ b/style.css
@@ -182,6 +182,19 @@ input {
   font-size: 24px;
 }
 
+@media (max-width: 430px) {
+  .hero_text {
+    font-size: 30px;
+    line-height: 30px; /* 1 column on smaller screens */
+  }
+  .outer_container {
+    height: 110px;
+  }
+  .input {
+    height: 50px;
+  }
+}
+
 input:focus {
   outline: 1px solid rgb(81, 0, 255);
 }
