--- a/style.css
+++ b/style.css
@@ -25,11 +25,18 @@ body {
   filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(30deg)
     brightness(109%) contrast(101%);
 
+  cursor: pointer;
   padding-top: 10px;
   transition: filter 0.3s ease;
 }
 
-.header_icon:hover {
+.header_icon:click,
+.header_icon:active {
+  filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(30deg)
+    brightness(50%) contrast(101%);
+}
+
+.header_icon_active {
   filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(30deg)
     brightness(50%) contrast(101%);
 }
