--- a/menus/menus_style.css
+++ b/menus/menus_style.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   color: whitesmoke;
+  font-family: "Courier New", monospace;
 }
 
 .menu-grid {
@@ -10,7 +11,7 @@
 }
 
 .out {
-  background-color: aqua;
+  background-color: rgb(219, 219, 219);
 
   display: flex;
   justify-content: center;
@@ -20,7 +21,7 @@
 }
 
 .outer {
-  background-color: yellow;
+  background-color: rgb(45, 45, 45);
   width: 60px;
   height: 60px;
 
@@ -46,7 +47,7 @@ input:checked ~ .outer {
 
 .bar {
   width: 100%;
-  background-color: red;
+  background-color: rgb(255, 153, 0);
   width: 100%;
   height: 0.4rem;
   border-radius: 2.5rem;
@@ -96,4 +97,6 @@ label {
 .link {
   font-size: 24px;
   margin-right: 10px;
+  color: white;
+  text-decoration: none;
 }
