--- a/menus/menus_style.css
+++ b/menus/menus_style.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   color: whitesmoke;
-  font-family: "Courier New", monospace;
+  font-family: "Roboto", monospace;
 }
 
 .menu-grid {
