--- a/menus/menus_style.css
+++ b/menus/menus_style.css
@@ -18,10 +18,10 @@ body {
   }
 }
 
-.out {
+.menu-outer-div {
   background-color: rgb(228, 228, 228);
-
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -32,8 +32,10 @@ body {
   outline-width: 2px;
 }
 
-.outer {
-  background-color: rgb(45, 45, 45);
+/*MENU 1 ####################### */
+
+.inner-m1 {
+  background-color: rgb(60, 60, 60);
   width: 60px;
   height: 60px;
 
@@ -45,12 +47,20 @@ body {
   transition: width 0.5s ease, left 0.5s ease;
 }
 
-input[type="checkbox"]:checked + .hamburger-icon .line:nth-child(1) {
-  transform: translateY(9px) rotate(45deg);
+input:checked ~ .inner-m1 {
+  width: 310px;
 }
 
-input:checked ~ .outer {
-  width: 310px;
+input[type="checkbox"]:checked + .inner-m1 .span-div-m1 .bar2 {
+  transform: rotate(45deg) translate(0.45rem, 10px); /* Apply the desired transformation */
+}
+
+input[type="checkbox"]:checked + .inner-m1 .span-div-m1 .bar1 {
+  transform: rotate(-45deg) translate(0.45rem, -10px); /* Apply the desired transformation */
+}
+
+input[type="checkbox"]:checked + .inner-m1 .span-div-m1 .bar3 {
+  width: 0%; /* Apply the desired transformation */
 }
 
 #checkID {
@@ -59,7 +69,7 @@ input:checked ~ .outer {
 
 .bar {
   width: 100%;
-  background-color: rgb(255, 153, 0);
+  background-color: rgb(197, 197, 197);
   width: 100%;
   height: 0.4rem;
   border-radius: 2.5rem;
@@ -69,19 +79,7 @@ input:checked ~ .outer {
   transition: transform 0.5s ease, left 0.5s ease, width 0.2s ease;
 }
 
-input[type="checkbox"]:checked + .outer .span-div .bar2 {
-  transform: rotate(45deg) translate(0.45rem, 10px); /* Apply the desired transformation */
-}
-
-input[type="checkbox"]:checked + .outer .span-div .bar1 {
-  transform: rotate(-45deg) translate(0.45rem, -10px); /* Apply the desired transformation */
-}
-
-input[type="checkbox"]:checked + .outer .span-div .bar3 {
-  width: 0%; /* Apply the desired transformation */
-}
-
-.span-div {
+.span-div-m1 {
   display: flex;
   flex-direction: column;
   height: 30px;
@@ -92,7 +90,7 @@ input[type="checkbox"]:checked + .outer .span-div .bar3 {
   margin-left: 0.9rem;
 }
 
-label {
+.label-m1 {
   background-color: rgba(0, 0, 255, 0);
   height: 100%;
   width: 100%;
@@ -101,7 +99,7 @@ label {
   cursor: pointer;
 }
 
-.link-div {
+.link-div-m1 {
   position: absolute;
   display: flex;
 
@@ -109,9 +107,46 @@ label {
   width: 100%;
 }
 
-.link {
+.link-m1 {
   font-size: 18px;
   margin-right: 15px;
   color: rgb(238, 238, 238);
   text-decoration: none;
+}
+
+/*MENU 2 ####################### */
+
+.accordion-m2 {
+  background-color: rgb(60, 60, 60);
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 50%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+.active,
+.accordion-m2:hover {
+  background-color: #ff4949;
+}
+
+.inner-m2 {
+  margin: 0px;
+
+  background-color: white;
+  width: 50%;
+
+  overflow: hidden;
+
+  max-height: 0px;
+  transition: max-height 0.2s ease-out;
+}
+
+.inner-text-m2 {
+  color: black;
+  padding-left: 8px;
+  padding-right: 8px;
 }
